cleanup, logger changes

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
    
    "dependencies":{
       "coffee-script":"*",
-      "colors":"*",
+      "node-log":"*",
       "protege":"*"
    },
    "engines":{
