complete test restructure

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash.templatesettings": "~2.4.1"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter spec"
   },
   "engines": {
     "node": ">= 0.9.0"
