--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lodash.template": "~2.4.1",
     "lodash._reinterpolate": "~2.4.1",
     "optimist": "~0.6.0",
-    "vinyl": "~0.2.1"
+    "vinyl": "~0.2.1",
+    "event-stream": "~3.0.20"
   },
   "devDependencies": {
     "mocha": "*",
