--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lodash._reinterpolate": "~2.4.1",
     "optimist": "~0.6.0",
     "vinyl": "~0.2.1",
-    "event-stream": "~3.0.20"
+    "event-stream": "~3.0.20",
+    "dateformat": "~1.0.7-1.2.3"
   },
   "devDependencies": {
     "mocha": "*",
