--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "event-stream": "*",
+    "through": "*",
     "lodash.templatesettings": "~2.4.1"
   },
   "scripts": {
