--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash._reinterpolate": "~2.4.1",
     "optimist": "~0.6.0",
     "vinyl": "~0.2.1",
-    "through": "*",
+    "through": "~2.3.4",
     "dateformat": "~1.0.7-1.2.3"
   },
   "devDependencies": {
