--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "optimist": "~0.6.0",
     "vinyl": "~0.2.1",
     "through": "~2.3.4",
-    "dateformat": "~1.0.7-1.2.3"
+    "dateformat": "~1.0.7-1.2.3",
+    "event-stream": "~3.0.20"
   },
   "devDependencies": {
     "mocha": "*",
     "should": "*",
-    "lodash.templatesettings": "~2.4.1",
-    "event-stream": "*"
+    "lodash.templatesettings": "~2.4.1"
   },
   "scripts": {
     "test": "mocha --reporter spec"
