--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-util",
   "description": "Utility functions for gulp plugins",
-  "version": "2.2.9",
+  "version": "2.2.10",
   "homepage": "http://github.com/wearefractal/gulp-util",
   "repository": "git://github.com/wearefractal/gulp-util.git",
   "author": "Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
@@ -17,16 +17,23 @@
     "stream-combiner": "0.0.4"
   },
   "devDependencies": {
-    "mocha": "*",
-    "should": "*",
+    "mocha": "~1.17.0",
+    "should": "~2.1.1",
+    "mocha-lcov-reporter": "0.0.1",
+    "coveralls": "~2.6.1",
+    "istanbul": "~0.2.3",
+    "rimraf": "~2.2.5",
+    "jshint": "~2.4.1",
+    "buffer-equal": "0.0.0",
     "lodash.templatesettings": "~2.4.1",
-    "event-stream": "~3.0.20"
+    "event-stream": "~3.1.0"
   },
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec && jshint",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "engines": {
-    "node": ">= 0.9.0"
+    "node": ">= 0.9"
   },
   "licenses": [
     {
