--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vinyl": "~0.2.1",
     "through": "~2.3.4",
     "dateformat": "~1.0.7-1.2.3",
-    "stream-combiner": "0.0.4"
+    "multipipe": "0.0.1"
   },
   "devDependencies": {
     "mocha": "~1.17.0",
