--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash._reinterpolate": "^2.4.1",
     "lodash.template": "^2.4.1",
     "minimist": "^0.2.0",
+    "lodash.uniq": "~2.4.1",
     "multipipe": "^0.1.0",
     "through2": "^0.5.0",
     "vinyl": "^0.2.1"
