--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "author": "Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
   "main": "./index.js",
   "dependencies": {
-    "chalk": "^0.4.0",
-    "lodash.template": "^2.4.1",
-    "lodash._reinterpolate": "^2.4.1",
-    "vinyl": "^0.2.1",
-    "through2": "^0.5.0",
+    "chalk": "^0.5.0",
     "dateformat": "^1.0.7-1.2.3",
+    "lodash._reinterpolate": "^2.4.1",
+    "lodash.template": "^2.4.1",
+    "minimist": "^0.2.0",
     "multipipe": "^0.1.0",
-    "minimist": "^0.2.0"
+    "through2": "^0.5.0",
+    "vinyl": "^0.2.1"
   },
   "devDependencies": {
     "mocha": "^1.17.0",
