--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "repository": "wearefractal/gulp-util",
   "author": "Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
   "dependencies": {
-    "chalk": "^0.5.0",
+    "chalk": "^0.5.1",
     "dateformat": "^1.0.7-1.2.3",
     "lodash": "^2.4.1",
     "lodash._reinterpolate": "^2.4.1",
     "lodash.template": "^2.4.1",
     "minimist": "^1.1.0",
-    "multipipe": "^0.1.0",
+    "multipipe": "^0.1.1",
     "through2": "^0.6.1",
-    "vinyl": "^0.4.0"
+    "vinyl": "^0.4.3"
   },
   "devDependencies": {
-    "mocha": "^1.17.0",
-    "should": "^4.0.0",
-    "mocha-lcov-reporter": "^0.0.1",
+    "buffer-equal": "^0.0.1",
     "coveralls": "^2.7.0",
-    "istanbul": "^0.3.0",
-    "rimraf": "^2.2.5",
+    "event-stream": "^3.1.0",
+    "istanbul": "^0.3.2",
     "jshint": "^2.4.1",
-    "buffer-equal": "~0.0.1",
     "lodash.templatesettings": "^2.4.1",
-    "event-stream": "^3.1.0"
+    "mocha": "^1.17.0",
+    "mocha-lcov-reporter": "^0.0.1",
+    "rimraf": "^2.2.5",
+    "should": "^4.0.0"
   },
   "scripts": {
     "test": "mocha --reporter spec && jshint",
