--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "version": "3.0.1",
   "repository": "wearefractal/gulp-util",
   "author": "Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
+  "files": [
+    "index.js",
+    "lib",
+    "LECENSE"
+  ],
   "dependencies": {
     "beeper": "^1.0.0",
     "chalk": "^0.5.1",
