--- a/package.json
+++ b/package.json
@@ -12,27 +12,26 @@
   "dependencies": {
     "beeper": "^1.0.0",
     "chalk": "^0.5.1",
-    "dateformat": "^1.0.7-1.2.3",
     "lodash": "^2.4.1",
+    "dateformat": "^1.0.11",
     "lodash._reinterpolate": "^2.4.1",
     "lodash.template": "^2.4.1",
     "minimist": "^1.1.0",
-    "multipipe": "^0.1.1",
+    "multipipe": "^0.1.2",
     "replace-ext": "0.0.1",
-    "through2": "^0.6.1",
+    "through2": "^0.6.3",
     "vinyl": "^0.4.3"
   },
   "devDependencies": {
     "buffer-equal": "^0.0.1",
-    "coveralls": "^2.7.0",
-    "event-stream": "^3.1.0",
-    "istanbul": "^0.3.2",
-    "jshint": "^2.4.1",
+    "coveralls": "^2.11.2",
+    "event-stream": "^3.1.7",
+    "istanbul": "^0.3.5",
+    "jshint": "^2.5.11",
     "lodash.templatesettings": "^2.4.1",
-    "mocha": "^1.17.0",
-    "mocha-lcov-reporter": "^0.0.1",
-    "rimraf": "^2.2.5",
-    "should": "^4.0.0"
+    "mocha": "^2.0.1",
+    "rimraf": "^2.2.8",
+    "should": "^4.4.1"
   },
   "scripts": {
     "test": "mocha --reporter spec && jshint",
