--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "beeper": "^1.0.0",
     "chalk": "^0.5.1",
     "dateformat": "^1.0.11",
-    "lodash._reinterpolate": "^2.4.1",
-    "lodash.template": "^2.4.1",
+    "lodash.reescape": "^3.0.0",
+    "lodash.reevaluate": "^3.0.0",
+    "lodash.reinterpolate": "^3.0.0",
+    "lodash.template": "^3.0.0",
     "minimist": "^1.1.0",
     "multipipe": "^0.1.2",
     "object-assign": "^2.0.0",
@@ -31,7 +33,7 @@
     "istanbul": "^0.3.5",
     "istanbul-coveralls": "^1.0.1",
     "jshint": "^2.5.11",
-    "lodash.templatesettings": "^2.4.1",
+    "lodash.templatesettings": "^3.0.0",
     "mocha": "^2.0.1",
     "rimraf": "^2.2.8",
     "should": "^4.4.1"
