Remove license file from package.json
LICENSE file is included by default on npm.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "author": "Fractal <contact@wearefractal.com> (http://wearefractal.com/)",
   "files": [
     "index.js",
-    "lib",
-    "LECENSE"
+    "lib"
   ],
   "dependencies": {
     "array-differ": "^1.0.0",
