--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "beeper": "^1.0.0",
     "chalk": "^0.5.1",
     "dateformat": "^1.0.11",
-    "lodash.reescape": "^3.0.0",
-    "lodash.reevaluate": "^3.0.0",
-    "lodash.reinterpolate": "^3.0.0",
+    "lodash._reescape": "^3.0.0",
+    "lodash._reevaluate": "^3.0.0",
+    "lodash._reinterpolate": "^3.0.0",
     "lodash.template": "^3.0.0",
     "minimist": "^1.1.0",
     "multipipe": "^0.1.2",
