--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "beeper": "^1.0.0",
     "chalk": "^1.0.0",
     "dateformat": "^1.0.11",
+    "globby": "^2.1.0",
     "lodash._reescape": "^3.0.0",
     "lodash._reevaluate": "^3.0.0",
     "lodash._reinterpolate": "^3.0.0",
