add branching logic to support new gulplog stuff

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "beeper": "^1.0.0",
     "chalk": "^1.0.0",
     "dateformat": "^1.0.11",
+    "fancy-log": "^1.0.0",
+    "gulplog": "0.0.0",
+    "has-gulplog": "^0.1.0",
     "lodash._reescape": "^3.0.0",
     "lodash._reevaluate": "^3.0.0",
     "lodash._reinterpolate": "^3.0.0",
