Use full lodash It is very likely to already be in the dependency tree, this saves requests during npm install.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "fancy-log": "^1.1.0",
     "gulplog": "^1.0.0",
     "has-gulplog": "^0.1.0",
-    "lodash._reescape": "^3.0.0",
-    "lodash._reevaluate": "^3.0.0",
-    "lodash._reinterpolate": "^3.0.0",
-    "lodash.template": "^3.0.0",
+    "lodash": "^3.0.0",
     "minimist": "^1.1.0",
     "multipipe": "^0.1.2",
     "object-assign": "^3.0.0",
